WellWon App v0.1 Dev

--- a/app/security/ssl/ssl_config.yaml
+++ b/app/security/ssl/ssl_config.yaml
@@ -105,8 +105,8 @@ monitoring:
     - type: "email"
       enabled: true
       recipients:
-        - "security@tradecore.com"
-        - "devops@tradecore.com"
+        - "security@wellwon.app"
+        - "devops@wellwon.app"
 
     - type: "slack"
       enabled: true
