--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@msgpack/msgpack": "^3.1.2",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -41,12 +44,14 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "immer": "^11.0.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "pako": "^2.1.0",
@@ -61,6 +66,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "use-sound": "^5.0.0",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zustand": "^4.5.7"
   },
