--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "use-sound": "^5.0.0",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zustand": "^4.5.7"
   },
